src/main/java/com/example/for_angular_project/error/AdminNotFoundException.java
package com.example.for_angular_project.error;

public class AdminNotFoundException extends Exception {

   public AdminNotFoundException() {
   }

   public AdminNotFoundException(String arg0) {
      super(arg0);
   }

   public AdminNotFoundException(Throwable arg0) {
      super(arg0);
   }

   public AdminNotFoundException(String arg0, Throwable arg1) {
      super(arg0, arg1);
   }

   public AdminNotFoundException(String arg0, Throwable arg1, boolean arg2, boolean arg3) {
      super(arg0, arg1, arg2, arg3);
   }

}
